fixed spacing bug

--- a/css/lightbox.css
+++ b/css/lightbox.css
@@ -1,5 +1,6 @@
 .preview {
 	width: 100%;
+  padding-bottom: var(--size-2);
 }
 
 .gallery {
